fix alignment of table rows

--- a/src/pages/PostLibrary/_postLibrary.module.scss
+++ b/src/pages/PostLibrary/_postLibrary.module.scss
@@ -116,6 +116,7 @@
 .row {
 	margin-bottom: 1.5rem;
 	font-size: 1.2rem;
+	display: block;
 }
 
 .editIcon {
